# bang

./: .gitignore  .pre-commit-config.yaml  .pydocstyle  AGENTS.md  Makefile  README.md  bang.spec  main.tscn  project.godot  pyinstaller_entry.py  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml  windows-build.yml
bang_py/: __init__.py  ability_dispatch.py  card_handlers.py  deck.py  deck_factory.py  deck_manager.py  event_decks.py  event_flags.py  event_hooks.py  event_logic.py  example.py  game_manager.py  game_manager_protocol.py  general_store.py  helpers.py  player.py  turn_phases.py  ui.py
bang_py/assets/: AGENTS.md  ATTRIBUTION.md
bang_py/card_handlers/: AGENTS.md  __init__.py  bang_handlers.py  basic.py  blue.py  dispatch.py  event.py  green.py
bang_py/cards/: AGENTS.md  __init__.py  bang.py  barrel.py  beer.py  bible.py  brawl.py  (+42 more)
docs/: AGENTS.md
scenes/: GameManager.tscn  Player.tscn
scripts/: AGENTS.md  GameManager.gd  Player.gd  bang.spec  bang.wxs  generate_assets.py  generate_checksums.py  profile_loading.py
tests/: AGENTS.md  conftest.py  test_additional_cards.py  test_audio_usage.py  test_bang_executable.py  test_base_character.py  test_bullet_event_cards.py  test_card_effects.py  test_card_handlers_modules.py  test_card_image_loader.py  test_cards.py  test_character_abilities.py  test_character_image_usage.py  test_characters.py  test_draw_discard_equipment.py  test_event_deck_effects.py  test_expansions.py  test_full_game_simulation.py  test_gamemanager.py  test_handler_registry.py  test_icon_loader.py  test_icon_usage.py  test_import_time_errors.py  test_join_token.py  test_load_sound.py  test_missing_rules.py  test_name_validation.py  test_network_client.py  test_network_integration.py  test_network_messages.py  test_network_serialization.py  test_new_features.py  test_player_health.py  test_qt_ui.py  test_root_asset_usage.py  test_server_room_code.py  test_server_task_cleanup.py  test_start_turn_effects.py  test_turn_rules.py  test_ui_prompts.py  (+1 more)
(+128 files in other folders)
