[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bang-game"
version = "0.1.1"
description = "Bang card game with optional websocket server and Qt UI"
authors = [{name = "Unknown"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.13"
dependencies = [
    "websockets>=15.0.1",
    "PySide6>=6.9.1",
    "cryptography>=42.0.5",
]

[project.scripts]
bang-server = "bang_py.network.server:main"
bang-client = "bang_py.network.client:run"
bang-ui = "bang_py.ui:main"

[tool.setuptools.package-data]
"bang_py" = [
    "assets/*.png",
    "assets/*.svg",
    "assets/icons/*.svg",
    "assets/characters/*.webp",
    "assets/audio/*.mp3",
    "assets/audio/*.wav",
    "assets/*.md",
    "qml/*.qml",
]
